[package]
name = "rhea"
version = "0.1.0"
authors = ["Lou Knauer <lou.knauer98@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "*"

[dependencies]
lalrpop-util = "*"
regex = "*"
lazy_static = "*"
clap = "*"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm8-0" }

